# Syntelligence

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  mkdocs.yml
.github/workflows/: backend-ci.yml  client-ci.yml  docs-ci.yml  frontend-ci.yml  services-ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/api/v1/endpoints/: users.py
client/: .eslintrc.json  .lintstagedrc.json  package.json  tsconfig.json  typedoc.json
client/docs/: README.md
client/src/: index.ts
docs/: README.md  gen_ref_pages.py  index.md
docs/api/: endpoints.md  index.md  models.md
docs/context/: product_vision_document.md
docs/dev/: contributing.md  domain_model_implementation_plan.md  domain_model_test_plan.md  setup.md
infrastructure/docker/: docker-compose.yml
services/: pyproject.toml
services/agent_service/: pyproject.toml
services/api_gateway/: pyproject.toml
services/conversation_service/: pyproject.toml
services/conversation_service/src/domain/: exceptions.py
services/conversation_service/src/domain/events/: conversation_events.py
services/conversation_service/src/domain/models/: conversation.py  message.py
services/conversation_service/src/domain/repositories/: conversation_repository_interface.py
services/conversation_service/src/domain/services/: conversation_service_interface.py
services/export_service/: pyproject.toml
services/knowledge_service/: pyproject.toml
services/tools/: check_docstrings.py
services/user_service/: pyproject.toml
shared/infrastructure/: health.py
tools/: README.md  action_plan.md  test_health_checks.py
