[project]
name = "Syntelligence"
version = "0.1.0"
description = "Transform Your Thinking with an AI-Enhanced Cognitive Workspace"
authors = [
    { name = "Samuel Prime", email = "sprime01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",  # For coverage reporting
    "pytest-asyncio>=0.23.5",  # For async test support
    "pytest-mock>=3.10.0",  # For mocking in tests
    "mypy>=1.8.0",  # Static type checking
    "ruff>=0.2.0",  # Fast Python linter and code formatter
    "freezegun>=0.18.0",  # For mocking time
    "isort>=5.12.0",  # Import sorting
    "pre-commit>=3.5.0",  # For managing pre-commit hooks
]

docs = [
    "mkdocs>=1.5.3",  # Documentation generator
    "mkdocs-material>=9.5.3",  # Material theme for MkDocs
    "mkdocstrings>=0.24.0",  # Extract documentation from docstrings
    "mkdocstrings-python>=1.7.5",  # Python handler for mkdocstrings
    "mkdocs-swagger-ui-tag>=0.6.7",  # Swagger UI integration
    "mkdocs-autorefs>=0.5.0",  # Auto-reference links
    "mkdocs-gen-files>=0.5.0",  # Generate files for documentation
    "mkdocs-literate-nav>=0.6.1",  # Generate navigation from files
    "mkdocs-section-index>=0.3.8",  # Add section index pages
    "pymdown-extensions>=10.7.1",  # Markdown extensions
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = ["tests"]
addopts = "-ra -q"
python_classes = ["Test*"]
python_functions = ["test_*"]
python_files = ["test_*.py"]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.uv.workspace]
members = ["agent_service"]
