[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = []
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",  # For async test support
    "pytest-mock>=3.10.0",  # For mocking in tests
    "httpx",  # For making HTTP requests in tests
    "fastapi",  # For testing FastAPI endpoints
]
